Fixed footer alignment

--- a/styles.css
+++ b/styles.css
@@ -224,4 +224,6 @@ img {
     background-color: #1F2937;
     color: #F9FAF8;
     height: 100px;
+    justify-content: center;
+    align-items: center;
 }
